FIX: background on safari (again...)

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -11,7 +11,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background-image: data-uri("./images/svg/background.svg");
+  background-color: @dark;
+  background-image: url("./images/svg/background.svg");
   background-size: 100% 100%;
 }
 
